--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,10 @@
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Avanthika",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "http": "0.0.0",
+    "https": "*",
+    "http": "*",
     "socket.io": "^2.3.0",
     "uniqid": "^5.1.0",
     "websocket": "^1.0.30"
